Added vacancies to home page; Added a vacancies list; Reworked top bar nav;

--- a/client/head.html
+++ b/client/head.html
@@ -5,5 +5,5 @@
 	<meta name="keywords" content="ToadIT">
 	<meta name="author" content="ToadIT">
 	<!-- Favicon -->
-	<link rel="icon" sizes="16x16 32x32 64x64" href="style/images/favicon.png">
+	<link rel="icon" sizes="16x16 32x32 64x64" href="/style/images/favicon.png">
 </head>
